# esp32s2-starter

./: .gitignore  Cargo.toml  Makefile.toml  README.md  build.sh  flash.sh  test.txt  test2.txt  workspace.code-workspace
main/: Cargo.toml  Makefile.toml  build.rs  rust-toolchain.toml  sdkconfig.defaults
main/.cargo/: config.toml
main/src/: main.rs
ulp/: Cargo.toml  Makefile.toml  rust-toolchain.toml
ulp/.cargo/: config.toml
ulp/src/: main.rs
