[package]
name = "main"
version = "0.1.0"
edition = "2021"

[features]
native = ["esp-idf-sys/native"]
experimental = ["esp-idf-svc/experimental", "embedded-svc/experimental"]

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
log = "0.4"
url = "2"
esp-idf-sys = { version = "0.28.2", features = ["binstart"] }
embedded-svc = "0.15.4"
esp-idf-svc = "0.34.1"
esp-idf-hal = "0.29.3"
embedded-hal = "0.2"
embedded-graphics = "0.7"
display-interface = "0.4"
display-interface-spi = "0.4"
st7789 = "0.6"
ili9341 = { version = "0.5", git = "https://github.com/yuri91/ili9341-rs" }
ssd1306 = "0.7"
smol = "1.2"

[build-dependencies]
embuild = "0.26"
anyhow = "1"
