[package]
name = "main"
version = "0.1.0"
edition = "2021"
resolver = "2"

[features]
default = ["native"]
native = ["esp-idf-sys/native"]
experimental = ["esp-idf-svc/experimental", "embedded-svc/experimental"]

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
log = "0.4"
esp-idf-sys = { version = "0.28.3", features = ["binstart"] }
embedded-svc = "0.15.4"
esp-idf-svc = "0.34.3"
esp-idf-hal = "0.30.0"
embedded-hal = "0.2.6"

[build-dependencies]
embuild = "0.27"
anyhow = "1"
